app with model included

--- a/notebooks/Predicting_Fire_Intensity_App_Lite.ipynb
+++ b/notebooks/Predicting_Fire_Intensity_App_Lite.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,25 +21,36 @@
     "\n",
     "import os\n",
     "import pickle\n",
+    "import collections\n",
+    "import config\n",
+    "import time\n",
+    "\n",
+    "import ipywidgets as widgets\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
+    "import threading\n",
+    "\n",
     "from datetime import date\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
-    "\n",
     "from darksky import forecast\n",
-    "\n",
-    "import config\n",
-    "\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "from ipywidgets import TwoByTwoLayout\n",
     "from ipywidgets import GridspecLayout\n",
-    "import threading\n",
     "from IPython.display import display, HTML\n",
-    "import ipywidgets as widgets\n",
-    "import time\n",
+    "\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
+    "from sklearn.ensemble import BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, MinMaxScaler, RobustScaler\n",
+    "\n",
     "\n",
     "RAPIDAPI_KEY  = config.darksky_api1"
    ]
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,12 +262,17 @@
     "        print(\"Wind Speed: \", wind_speed_in)\n",
     "        print(\"-------------------------------\")\n",
     "        print(\"\")\n",
+    "        print(\"----------------\")\n",
+    "        print(\"|    Severe    |\")\n",
+    "        print(\"----------------\")\n",
+    "        print(\"\")\n",
+    "        print(\"\")\n",
     "button.on_click(on_button_clicked)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +285,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_X (df):\n",
+    "\n",
+    "    features = ['latitude', 'longitude', 'doy','fuelcode', 'fuel_moisture_class', 'prefire_fuel', 'temperature', 'humidity', 'precip_intensity', \n",
+    "             'wind_gust', 'wind_speed']\n",
+    "\n",
+    "    X = df[features]\n",
+    "    \n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def open_estimator(filename) :\n",
+    "    \n",
+    "    infile = open(filename,'rb')\n",
+    "    estimator = pickle.load(infile)\n",
+    "    infile.close()\n",
+    "\n",
+    "    print (\"Model Loaded...\", filename)\n",
+    "    \n",
+    "    return estimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Loaded... pipeline.pickle\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = open_estimator(\"pipeline.pickle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = find_X(df_fires)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_inputs = pd.DataFrame(columns=['latitude', 'longitude', 'doy','fuelcode', 'fuel_moisture_class', 'prefire_fuel', 'temperature', 'humidity', 'precip_intensity', \n",
+    "             'wind_gust', 'wind_speed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_inputs = app_inputs.append({'latitude': lat.value,\n",
+    "                                'longitude': lon.value,\n",
+    "                                'doy': datepicker.value.timetuple().tm_yday,\n",
+    "                                'fuelcode': fuel_code.value,\n",
+    "                                'fuel_moisture_class': fuel_moist.value,\n",
+    "                                'prefire_fuel': prefire.value,\n",
+    "                                'temperature': temperature_in,\n",
+    "                                'humidity': humidity_in,\n",
+    "                                'precip_intensity': precip_intensity_in,\n",
+    "                                'wind_gust': wind_gust_in,\n",
+    "                                'wind_speed': wind_speed_in},\n",
+    "                               ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>doy</th>\n",
+       "      <th>fuelcode</th>\n",
+       "      <th>fuel_moisture_class</th>\n",
+       "      <th>prefire_fuel</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precip_intensity</th>\n",
+       "      <th>wind_gust</th>\n",
+       "      <th>wind_speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>35.9013</td>\n",
+       "      <td>-86.2953</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4335.068543</td>\n",
+       "      <td>63.5</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.0016</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>3.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   latitude  longitude    doy  fuelcode  fuel_moisture_class  prefire_fuel  \\\n",
+       "0   35.9013   -86.2953  110.0       1.0                  4.0   4335.068543   \n",
+       "\n",
+       "   temperature  humidity  precip_intensity  wind_gust  wind_speed  \n",
+       "0         63.5      0.57            0.0016       7.34        3.32  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app_inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = find_X(app_inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>doy</th>\n",
+       "      <th>fuelcode</th>\n",
+       "      <th>fuel_moisture_class</th>\n",
+       "      <th>prefire_fuel</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precip_intensity</th>\n",
+       "      <th>wind_gust</th>\n",
+       "      <th>wind_speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>35.9013</td>\n",
+       "      <td>-86.2953</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4335.068543</td>\n",
+       "      <td>63.5</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.0016</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>3.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   latitude  longitude    doy  fuelcode  fuel_moisture_class  prefire_fuel  \\\n",
+       "0   35.9013   -86.2953  110.0       1.0                  4.0   4335.068543   \n",
+       "\n",
+       "   temperature  humidity  precip_intensity  wind_gust  wind_speed  \n",
+       "0         63.5      0.57            0.0016       7.34        3.32  "
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Num Array of Predicted Values: Moderate']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Num Array of Predicted Values: \" + predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moderate\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predicted[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -285,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {
     "scrolled": false
    },
@@ -311,12 +618,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e70c33d491ef42788d6952672493e7b5",
+       "model_id": "e4283a5e454f452ca5e9a9d4a0055e38",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridspecLayout(children=(DatePicker(value=datetime.date(2011, 6, 19), description='Fire start: ', layout=Layou…"
+       "GridspecLayout(children=(DatePicker(value=datetime.date(2020, 6, 19), description='Fire start: ', layout=Layou…"
       ]
      },
      "metadata": {},
@@ -459,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
