--- a/notebooks/FireSeverityApp.ipynb
+++ b/notebooks/FireSeverityApp.ipynb
@@ -11,18 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d7c7aa35aaa4245b6f346dafe381a0a",
+       "model_id": "bef1115a6214477fbc0074726f8f94bd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridspecLayout(children=(DatePicker(value=datetime.date(2020, 6, 19), description='Fire start: ', layout=Layou…"
+       "GridspecLayout(children=(DatePicker(value=datetime.date(2012, 8, 13), description='Fire start: ', layout=Layou…"
       ]
      },
      "metadata": {},
@@ -38,14 +40,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "lat: 44.3614\n",
+    "lon: -114.9311\n",
+    "8 2012"
+   ]
   },
   {
    "cell_type": "code",
