Statistical and Exploratory Analysis of NASA Fire Intensity Features

--- a/notebooks/NASA-StatisticalAnalysis-ProductionCode.ipynb
+++ b/notebooks/NASA-StatisticalAnalysis-ProductionCode.ipynb
@@ -10,14 +10,16 @@
     "#### ** Description of NASA M6 key statistics \n",
     "#### ** Correlation Analysis of Intensity Indicators, _frp, brightness, bright_t31_ \n",
     "#### ** A peak into the distribution of 'frp', _an indicator of fire intensity_:   https://feer.gsfc.nasa.gov/projects/emissions/\n",
-    "#### ** Correlation Analysis of Intensity and Emission: https://www.sciencedirect.com/science/article/pii/S1352231019303164\n",
+    "#### ** Catplots of Fire Intesity Seasonal and Regional changes\n",
     "#### ** Heatmap of fire Intensity over the United States \n",
-    "#### ** Correlation Analysis of Intensity and Fire Size "
+    "#### ** Correlation Analysis of Intensity and Fire Size \n",
+    "#### ** Binning Fire Brightness\n",
+    "#### ** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query the tables"
+    "### Query the model tables"
    ]
   },
   {
@@ -155,12 +157,12 @@
    "metadata": {},
    "source": [
     "### <font color=\"#C71585\"> Load Data </font>\n",
-    "### Load Data"
+    "### Load Local Datasets for Statistical Analysis and Initial Exploratory Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,12 +454,12 @@
    "metadata": {},
    "source": [
     "### <font color=\"#C71585\"> Boxplot of key intensity indicators  </font>\n",
-    "### Boxplot of key intensity indicators"
+    "### Boxplot of key intensity indicators (outliers removed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,15 +473,6 @@
    "outputs": [],
    "source": [
     "selected_intensity = selected_M6df[selected_M6df['frp'] < 2000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected_brightness "
    ]
   },
   {
@@ -638,7 +631,7 @@
    "metadata": {},
    "source": [
     "### <font color=\"#C71585\"> Scaling the key intensity indicators  </font>\n",
-    "### Scaling the key intensity indicators"
+    "### Scaling the key intensity indicators (outliers included)"
    ]
   },
   {
@@ -811,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,39 +1250,6 @@
     "plt.ylabel('Month')\n",
     "ax.set_ylim((0,15))\n",
     "plt.text(2,13,\"Fire Intensity Seasonality\", fontsize = 24, color='#865171')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color=\"#0093bb\"> On the Model Table </font>\n",
-    "### On the Model Table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['index', 'latitude', 'longitude', 'doy', 'month', 'year',\n",
-       "       'cluster_reference', 'fire_region', 'season', 'covertype', 'fuelcode',\n",
-       "       'prefire_fuel', 'fuel_moisture_class', 'temperature', 'humidity',\n",
-       "       'precip_intensity', 'visibility', 'wind_speed', 'wind_gust',\n",
-       "       'brightness', 'fire_intensity', 'bright_t31', 'frp'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfModel.columns"
    ]
   },
   {
