--- a/notebooks/DBScan_Clustering_Emissions.ipynb
+++ b/notebooks/DBScan_Clustering_Emissions.ipynb
@@ -104,7 +104,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "emyear20xx = pd.read_sql(queryEmissions, engine)  # Bring in Emissions records from database. "
+    "emyear20xx = pd.read_sql(queryEmissions, engine)  # Bring in Emissions records (w/o Null Values) from database. "
    ]
   },
   {
@@ -1502,16 +1502,9 @@
     "# that way we get the full details such as 'covertype, 'fuelcode', etc. from the original dataframe.\n",
     "\n",
     "rs = rep_points.apply(lambda row: emyearset20xx[(emyearset20xx['latitude']==row['latitude']) & (emyearset20xx['longitude']==row['longitude'])].iloc[0], axis=1)\n",
-    "rs.to_csv('/Users/AlfHaugen/Python/Wildfire_Data/FireExports/Emissions2006East_DBScan_Clusters.csv', encoding='utf-8')\n",
+    "rs.to_csv('../data/Emissions2006East_DBScan_Clusters.csv', encoding='utf-8')\n",
     "rs.tail()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
